syntax = "proto3";
package proto;
option go_package = "code-analyser/protos/pb/plugin";

import "protos/plugin/common.proto";

service Library {
  rpc   Detect(Input) returns (LibraryType);
  rpc   IsUsed(Input) returns (BoolOutput);
  rpc   PercentOfUsed(Input) returns (FloatOutput);
}

message  LibraryType{
  bool value = 1;
  enum Type {
    REPLACED = 0;
    EXTERNAL = 1;
  }
  Type type = 3;
  Error error = 2;
}

